--- a/DataAnalysis/AutonomousRacingResults.rmd
+++ b/DataAnalysis/AutonomousRacingResults.rmd
@@ -50,7 +50,7 @@ kable(reward)
 
 benchmarks = data %>%
   filter(eval_name=="Performance")%>%
-  select(agent_name, SSS_avg_times, SSS_success_rate, Wo_avg_times, Wo_success_rate)%>%
+  select(agent_name, r1, r2, SSS_avg_times, SSS_success_rate, Wo_avg_times, Wo_success_rate)%>%
    arrange(desc(agent_name))
 
 #TODO: get map name then use pivot wider to compare accross maps.
