--- a/DataAnalysis/AutonomousRacingResults.rmd
+++ b/DataAnalysis/AutonomousRacingResults.rmd
@@ -59,6 +59,21 @@ kable(benchmarks)
 
 ```
 
+## Stability
+```{r, stability}
+
+data %>%
+  filter(eval_name=="Performance")%>%
+  filter(Wo_avg_times>2)%>%
+  select(agent_name, Wo_avg_times, Wo_success_rate, vehicle)%>%
+  ggplot(aes(x=vehicle, y=Wo_avg_times, group=vehicle))+
+  geom_boxplot()
+  # coord_cartesian(ylim = c(1, 20))
+
+  
+
+```
+
 
 # Benchmarking
 
