--- a/DataAnalysis/AutonomousRacingResults.rmd
+++ b/DataAnalysis/AutonomousRacingResults.rmd
@@ -35,7 +35,7 @@ kable(kernel_gen)
 ```{r}
 reward = data %>%
   filter(eval_name=="RewardTest") %>%
-  select(agent_name, r1, r2, rk, constant_reward, SSS_avg_times, SSS_success_rate, Wo_avg_times, Wo_success_rate)%>%
+  select(agent_name, rk, constant_reward, SSS_avg_times, SSS_std_dev,  SSS_avg_interventions)%>%
      arrange(agent_name)
 
 
@@ -50,10 +50,9 @@ kable(reward)
 
 benchmarks = data %>%
   filter(eval_name=="Performance")%>%
-  select(agent_name, r1, r2, SSS_avg_times, SSS_success_rate, Wo_avg_times, Wo_success_rate)%>%
+  filter(Wo_avg_times> 1)%>%
+  select(agent_name, SSS_avg_times, Wo_avg_times, Wo_success_rate)%>%
    arrange(desc(agent_name))
-
-#TODO: get map name then use pivot wider to compare accross maps.
 
 kable(benchmarks)
 
@@ -70,8 +69,14 @@ data %>%
   geom_boxplot()
   # coord_cartesian(ylim = c(1, 20))
 
+b =  data %>%
+  filter(eval_name=="Performance")%>%
+  filter(Wo_avg_times>2)%>%
+  select(Wo_avg_times, vehicle, agent_name)%>%
+  pivot_wider(names_from = vehicle, values_from = Wo_avg_times)
+  # group_by(vehicle)
   
-
+summary(b)
 ```
 
 
