--- a/DataAnalysis/AutonomousRacingResults.rmd
+++ b/DataAnalysis/AutonomousRacingResults.rmd
@@ -62,16 +62,16 @@ kable(benchmarks)
 ```{r, stability}
 
 data %>%
-  filter(eval_name=="Performance")%>%
-  filter(Wo_avg_times>2)%>%
+  filter(eval_name=="benchmark")%>%
+  filter(Wo_avg_times>6)%>%
   select(agent_name, Wo_avg_times, Wo_success_rate, vehicle)%>%
   ggplot(aes(x=vehicle, y=Wo_avg_times, group=vehicle))+
   geom_boxplot()
   # coord_cartesian(ylim = c(1, 20))
 
 b =  data %>%
-  filter(eval_name=="Performance")%>%
-  filter(Wo_avg_times>2)%>%
+  filter(eval_name=="benchmark")%>%
+  filter(Wo_avg_times>6)%>%
   select(Wo_avg_times, vehicle, agent_name)%>%
   pivot_wider(names_from = vehicle, values_from = Wo_avg_times)
   # group_by(vehicle)
