--- a/DataAnalysis/AutonomousRacingResults.rmd
+++ b/DataAnalysis/AutonomousRacingResults.rmd
@@ -49,7 +49,7 @@ kable(reward)
 ```{r}
 
 benchmarks = data %>%
-  filter(eval_name=="Performance")%>%
+  filter(eval_name=="repeat")%>%
   filter(Wo_avg_times> 1)%>%
   select(agent_name, SSS_avg_times, Wo_avg_times, Wo_success_rate)%>%
    arrange(desc(agent_name))
@@ -87,8 +87,9 @@ summary(b)
 
 benchmarks = data %>%
   filter(eval_name=="benchmark")%>%
-  select(agent_name, SSS_avg_times, SSS_success_rate, Wo_avg_times, Wo_success_rate)%>%
-   arrange(desc(agent_name))
+  select(vehicle, map_name, Wo_avg_times)%>%
+   arrange(desc(vehicle)) %>%
+  pivot_wider(names_from = map_name, values_from = Wo_avg_times)
 
 #TODO: get map name then use pivot wider to compare accross maps.
 
