--- a/DataAnalysis/AutonomousRacingResults.rmd
+++ b/DataAnalysis/AutonomousRacingResults.rmd
@@ -50,7 +50,7 @@ kable(reward)
 
 benchmarks = data %>%
   filter(eval_name=="repeat")%>%
-  filter(Wo_avg_times> 1)%>%
+  # filter(Wo_avg_times> 1)%>%
   select(agent_name, SSS_avg_times, Wo_avg_times, Wo_success_rate)%>%
    arrange(desc(agent_name))
 
