--- a/DataAnalysis/AutonomousRacingResults.rmd
+++ b/DataAnalysis/AutonomousRacingResults.rmd
@@ -2,7 +2,9 @@
 title: "AutonomousRacingResults"
 author: "Benjamin Evans"
 date: "04/02/2022"
-output: html_document
+output:
+  pdf_document: default
+  html_document: default
 ---
 
 
